@@ -1050,6 +1050,22 @@ for func_str in ("var", "nanvar"):
     implement_func("function", func_str, input_units=None, output_unit="variance")
 
 
+@implements("geomspace", "function")
+def _geomspace(start, stop, num=50, endpoint=True, dtype=None, axis=0):
+    if all(not _is_quantity(arg) for arg in (start, stop)):
+        return np.geomspace(start, stop, num, endpoint, dtype, axis)
+    first_input_units = _get_first_input_units((start, stop))
+    if not _is_quantity(start):
+        start = start * first_input_units._REGISTRY.parse_units("dimensionless")
+    if not _is_quantity(stop):
+        stop = stop * first_input_units._REGISTRY.parse_units("dimensionless")
+
+    start = _base_unit_if_needed(start)
+    stop = _base_unit_if_needed(stop)
+    (start, stop), output_wrap = unwrap_and_wrap_consistent_units(start, stop)
+    return output_wrap(np.geomspace(start, stop, num, endpoint, dtype, axis))
+
+
 def numpy_wrap(func_type, func, args, kwargs, types):
     """Return the result from a NumPy function/ufunc as wrapped by Pint."""
 
