@@ -5,6 +5,7 @@ Pint Changelog
 -------------------
 
 - Add devcontainer.json to add GitHub Codespace support (#2208)
+- Add support for `numpy.geomspace` (#2206)
 
 
 0.25.0 (2025-08-25)
